# mlx-rag-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  profile_output.prof  pyproject.toml
.gemini/tmp/bac41e9ae6d732a3355c3dbbcc098a21f5d94b4678d176f06f512d65560317df/: verify_mlx.py
.github/: CODEOWNERS
.github/workflows/: main.yml
agents/: CLI-UI.md  COMMANDS_MANIFEST.md  DEVELOPMENT_GUIDELINES.md  HANDOFFS.md  SITEMAP.md  USABILITY.md
agents/projects/mlx-data-pipeline/: GEMINI.md  README.md  SITEMAP.md  tasks.md
agents/projects/mlx-data-pipeline/sessions/: 2025-11-07T11-15-session.md
agents/projects/mlx-ecosystem-alignment/: CLEANUP_AUDIT.md  README.md
agents/projects/mlx-rag-setup/: GEMINI.md
agents/projects/mlx-rag-setup/qa/: qa-checklist.md
agents/projects/mlx-rag-setup/sessions/: 2025-11-07T10-00-session.md  2025-11-07T12-15-session.md
agents/projects/mlx-setup/: GEMINI.md  LM_Studio_MLX_Engine_Analysis.md  README.md  SITEMAP.md
agents/projects/mlx-setup/scripts/: health_check.py  minimal_test.py  verify_mlx.py
agents/projects/python-3.13-migration/: README.md
agents/projects/repo-hygiene/: README.md  tasks.md
agents/projects/repo-hygiene/sessions/: 2025-11-08T_repo_hygiene_implementation_session.md
agents/projects/t5-pipeline/: README.md  tasks.md
agents/projects/t5-pipeline/future-features/: future-feature.md
agents/projects/voice-app/: AUDIT-log.md  SITEMAP.md
agents/templates/: AUDIT-log.md  SITEMAP.md
apps/: __init__.py  bench_cli.py  chat_cli.py  classify_cli.py  flux_cli.py  ingest_cli.py  mlxlab_cli.py  musicgen_cli.py  rag_cli.py  sts_avatar_cli.py  voice_chat_cli.py  whisper_cli.py
apps/ui/: __init__.py  components.py  console.py  utils.py
archive/tui/: rag_tui.py
benchmarks/: flux_benchmark.py  prompt_evaluation.py
benchmarks/flux/: bench_flux.py  prompts.py
benchmarks/musicgen/: musicgen_benchmark.py
benchmarks/results/: flux_baseline_m3max.json  flux_quick_m3max.json  results.json
benchmarks/traces/: flux_first_run_toc.xml
benchmarks/traces/flux_first_run.trace/Trace1.run/: RunIssues.storedata
benchmarks/traces/flux_first_run.trace/Trace2.run/: RunIssues.storedata
benchmarks/traces/flux_first_run.trace/corespace/: MANIFEST.plist
docs/: AUDIT-log.md  CHAT_WORKFLOWS.md  CHAT_WRAPPER_USAGE.md  COMMANDS_MANIFEST.md  DEVELOPMENT_GUIDELINES.md  GEMINI.md  HANDOFFS.md  LAB_STATUS.md  MLX-CORE.md  README.md  STS_AVATAR_PIPELINE.md  VOICE_CHAT_PIPELINE.md  comprehensive-ui-layout.md  open-tasks.md  tasks.md
docs/projects/launcher/: README.md  tasks.md
docs/projects/launcher/sessions/: 2025-11-15-launcher-planning.md
docs/projects/llasa-pipeline/: README.md  tasks.md
docs/projects/llasa-pipeline/sessions/: README.md  session-template.md
docs/projects/mlx-data-pipeline/: AUDIT-log.md  tasks.md
docs/projects/mlx-data-pipeline/qa/: qa-checklist.md
docs/projects/mlx-rag-setup/: AUDIT-log.md  README.md  SITEMAP.md  tasks.md
docs/projects/mlx-rag-setup/sessions/: 2025-11-07T13-00-session.md
docs/projects/mlx-setup/: AUDIT-log.md  README.md  tasks.md
docs/projects/mlx-setup/sessions/: 2025-11-07T10-30-session.md
docs/projects/musicgen/: HITL-notes.md  README.md  USAGE.md  tasks.md
docs/projects/musicgen-pipeline/: README.md
docs/projects/musicgen/sessions/: 2025-11-08T_musicgen_adapter_development_session.md  2025-11-08T_musicgen_cli_api_creation_session.md  2025-11-08T_musicgen_documentation_session.md  2025-11-08T_musicgen_env_setup_deep_dive_session.md  (+6 more)
docs/projects/python-3.13-migration/: TEST_LOG.md
docs/projects/repo-hygiene/: GEMINI.md
docs/projects/rollback-reflection/: README.md  tasks.md
docs/projects/vision-pipeline/: README.md  tasks.md
docs/projects/voice-app/: README.md  tasks.md
docs/projects/whisper-pipeline/: README.md
docs/templates/: GEMINI.md  tasks.md
docs/ui/: cli-layout-proposals.md
examples/musicgen/: prompts-models.txt
experiments/: __init__.py
experiments/benchmarking/: retrieval_benchmark.py
experiments/dataset_generation/: __init__.py  generate_qa_dataset.py
experiments/ingestion/: build_vdb_from_generated_dataset.py
mlx-models/: README.md
mlx-models/Phi-3-Vision-MLX/: .gitignore  0-test.py  README2.md  api_key_manager.py  secure_server.py  server.crt  server.key  setup.py  tripo_pipeline.py
mlx-models/Phi-3-Vision-MLX/phi_3_vision_mlx/: Phi3_Vision_MLX_Examples.md  README.md  __init__.py  phi_3_vision_mlx.py
mlx-models/llasa-3b-Q4-mlx/: .gitattributes  README.md  config.json  generate.py  model.safetensors  model.safetensors.index.json  tokenizer.json  tokenizer_config.json
scripts/: clean_models.py  convert_cross_encoder.py  download_gpt_oss_20b.py  model_manifest.py
src/libs/mlx_core/: model_engine.py
src/libs/musicgen_core/: __init__.py  adapter.py  encodec_model.py  musicgen_mlx.py  musicgen_model.py  t5_model.py  utils.py
src/libs/ollama_core/: embedding_engine.py
src/mlx_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag/: __init__.py  mlx_compat.py
src/rag/chat/: __init__.py  gpt_oss_wrapper.py  templates.py
src/rag/cli/: __init__.py  app_launcher.py  benchmark.py  download_flux_models.py  download_model.py  download_musicgen_weights.py  entrypoints.py  flux.py  flux_dreambooth.py  flux_txt2image.py  generate_music.py  interactive_rag.py  utils.py
src/rag/cli/ui/: __init__.py  (+12 more)
src/rag/config/: config.json
src/rag/ingestion/: create_vdb.py
src/rag/models/: phi3_vision_backend.py
src/rag/retrieval/: query_vdb.py  vdb.py
src/rag/stt/: __init__.py  whisperx_client.py
src/rag/tts/: __init__.py  kokoro_tts.py  marvis_tts.py  viseme_mapper.py
tests/: test_flux_generation.py
tests/cli/: test_entrypoints.py
tests/flux/: test_flux_benchmark.py  test_flux_smoke.py  test_flux_txt2image_helpers.py
tests/musicgen/: test_encodec_model.py  test_musicgen_adapter.py
ui/: __init__.py  app_frames.py  atoms.py  chat_framed_app.py  dashboards.py  framed_app.py  grid_menu.py  layouts.py  molecules.py  playground.py  settings.py  spinners.py  theme.py
(+173 files in other folders)
