[project]
name = "mlx-rag"
version = "0.1.0"
description = "Local RAG on Apple Silicon using MLX, Hugging Face models and custom vector DB."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David Caballero" }
]

# Core runtime for src/rag (no toys, only what production RAG needs)
dependencies = [
  "mlx~=0.29.3", # Apple MLX: array / nn framework  [oai_citation:3‡PyPI](https://pypi.org/project/mlx/)
  "mlx-lm", # LLM wrapper on top of MLX  [oai_citation:4‡GitHub](https://github.com/ml-explore/mlx-lm)
  "huggingface-hub~=0.34.0", # model / weights from HF Hub  [oai_citation:5‡PyPI](https://pypi.org/project/huggingface-hub/?utm_source=chatgpt.com)
  "transformers~=4.57.1", # tokenizers + model configs (BERT, etc.)  [oai_citation:6‡PyPI](https://pypi.org/project/transformers/?utm_source=chatgpt.com)
  "unstructured[pdf]~=0.18.15", # PDF partitioning for ingestion
  "pydantic~=2.12.3", # config / validation layer
  "typer~=0.12.3", # CLI application framework
  "rich~=13.7.1", # Rich text and beautiful formatting in the terminal
  "numpy>=1.26",
  "tqdm>=4.66",
  "requests>=2.32",
  "soundfile>=0.12.1", # Required for saving audio files
  "regex",
  "Pillow",
  "sentencepiece",
  "datasets",
  "mlx-data>=0.2.0",
]

[project.scripts]
rag-cli = "apps.rag_cli:main"
flux-cli = "apps.flux_cli:main"
bench-cli = "apps.bench_cli:main"

# Optional extras (if you ever publish / want pip install .[pdf,dev] behavior)
[project.optional-dependencies]
pdf = [
  "unstructured[pdf]~=0.18.15"
]

[dependency-groups]
# Dev tooling you'll actually run on this repo
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipython",
]

# For notebooks, analysis, random ML poking
experiments = [
  "jupyterlab",
  "matplotlib",
  "pandas",
]

# For documentation (if you want nice docs later)
docs = [
  "mkdocs",
  "mkdocs-material",
]

# If you want a separate group just for heavy RAG experiments (optional)
rag-extras = [
  "python-dotenv",
  "rich",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "rag",
    "rag.config",
    "rag.ingestion",
    "rag.retrieval",
    "rag.models",
    "rag.cli",
    "apps",
    "libs",
    "libs.mlx_core",
    "libs.utils",
    "libs.musicgen_core", # Added musicgen_core
    "libs.ollama_core", # Added ollama_core
    "rag.models.flux",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4"] # Common linting rules
ignore = ["E501"] # Ignore line length, handled by black

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
