[project]
name = "mlx-rag"
version = "0.1.0"
description = "Local RAG on Apple Silicon using MLX, Hugging Face models and custom vector DB."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "David Caballero" }
]

# Core runtime for src/rag (no toys, only what production RAG needs)
dependencies = [
  "mlx~=0.29.3", # Apple MLX: array / nn framework  [oai_citation:3‡PyPI](https://pypi.org/project/mlx/)
  "mlx-lm", # LLM wrapper on top of MLX  [oai_citation:4‡GitHub](https://github.com/ml-explore/mlx-lm)
  "huggingface-hub~=0.34.0", # model / weights from HF Hub  [oai_citation:5‡PyPI](https://pypi.org/project/huggingface-hub/?utm_source=chatgpt.com)
  "transformers~=4.57.1", # tokenizers + model configs (BERT, etc.)  [oai_citation:6‡PyPI](https://pypi.org/project/transformers/?utm_source=chatgpt.com)
  "unstructured[pdf]~=0.18.15", # PDF partitioning for ingestion
  "pydantic~=2.12.3", # config / validation layer
  "typer~=0.12.3", # CLI application framework
  "rich~=13.7.1", # Rich text and beautiful formatting in the terminal
  "numpy>=1.26",
  "tqdm>=4.66",
  "requests>=2.32",
  "soundfile>=0.12.1", # Required for saving audio files
  "torch>=2.5.1", # Needed for pyannote + MLX whisper integrations
  "torchaudio>=2.5.1", # Matches torch 2.5 API (AudioMetaData) for diarization
  "kokoro>=0.9.2", # Kokoro TTS with phoneme output for avatar lip-sync
  "whisperx @ git+https://github.com/sooth/whisperx-mlx.git", # WhisperX fork with MLX backend + diarization
  "sounddevice>=0.4.7", # Live audio capture/playback for push-to-talk
  "pynput>=1.7.6", # Keyboard listener for push-to-talk mode
  "pip>=24.0", # Required by kokoro due to spaCy issue (temporary workaround)
  "regex",
  "Pillow",
  "sentencepiece",
  "datasets",
  "mlx-data>=0.2.0",
  "tiktoken>=0.5.1", # OpenAI tokenizer for Whisper
  "more-itertools>=9.0", # Utilities for Whisper
  "numba>=0.58", # JIT compilation for audio processing
  "scipy>=1.11", # Scientific computing for audio
  "InquirerPy>=0.3.4", # Interactive CLI prompts for mlxlab
]

[project.scripts]
mlxlab = "rag.cli.entrypoints:mlxlab_main"
rag-cli = "rag.cli.entrypoints:rag_cli_main"
chat-cli = "rag.cli.entrypoints:chat_cli_main"
voice-chat-cli = "rag.cli.entrypoints:voice_chat_cli_main"
sts-avatar-cli = "rag.cli.entrypoints:sts_avatar_cli_main"
flux-cli = "rag.cli.entrypoints:flux_cli_main"
bench-cli = "rag.cli.entrypoints:bench_cli_main"
musicgen-cli = "rag.cli.entrypoints:musicgen_cli_main"
whisper-cli = "rag.cli.entrypoints:whisper_cli_main"
ingest-cli = "rag.cli.entrypoints:ingest_cli_main"
classify-cli = "rag.cli.entrypoints:classify_cli_main"

# Optional extras (if you ever publish / want pip install .[pdf,dev] behavior)
[project.optional-dependencies]
pdf = [
  "unstructured[pdf]~=0.18.15"
]

[dependency-groups]
# Dev tooling you'll actually run on this repo
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipython",
]

# For notebooks, analysis, random ML poking
experiments = [
  "jupyterlab",
  "matplotlib",
  "pandas",
]

# For documentation (if you want nice docs later)
docs = [
  "mkdocs",
  "mkdocs-material",
]

# If you want a separate group just for heavy RAG experiments (optional)
rag-extras = [
  "python-dotenv",
  "rich",
]

[tool.setuptools]
package-dir = {"" = "src", "apps" = "."}
packages = [
    "rag",
    "rag.config",
    "rag.ingestion",
    "rag.retrieval",
    "rag.models",
    "rag.cli",
    "apps",
    "libs",
    "libs.mlx_core",
    "libs.utils",
    "libs.musicgen_core", # Added musicgen_core
    "libs.ollama_core", # Added ollama_core
    "rag.models.flux",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4"] # Common linting rules
ignore = ["E501"] # Ignore line length, handled by black

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | buck-out
  | build
    | dist
)/
'''

[tool.uv]
package = true
